k8s-script/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: frontend-ns
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: nextjs
          image: seawaysionspeed/nextjs-k8s-101:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: frontend-ns
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  type: ClusterIP
  # type: NodePort #default: 30000-32767
  ports:
    - port: 80
      targetPort: 3000
      # nodePort: 30001
