k8s-script/ingress-prod-with-cert.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: frontend-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / # กรณีทำ rewrite
    cert-manager.io/issuer: frontend-letsencrypt-nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 14again.life
      secretName: frontend-letsencrypt-nginx
  rules:
    - host: 14again.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
